menambahkan link css

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
   <head>
     <title>styles conference</title>
+<link rel="stylesheet" href="main.css">
   </head>
+
   <body>
     <h1>styles conference</h1>
     <p>Every year the brightest web designers and front-end developers descend on Chicago to discuss the latest technologies. Join us this August!</p>
