--- a/index.html
+++ b/index.html
@@ -2,11 +2,43 @@
 <html lang="en">
   <head>
     <title>styles conference</title>
-<link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="main.css" />
   </head>
 
   <body>
-    <h1>styles conference</h1>
-    <p>Every year the brightest web designers and front-end developers descend on Chicago to discuss the latest technologies. Join us this August!</p>
+    <header>
+      <h1>styles conference</h1>
+      <h3>August 24&ndash;26th &mdash; Chicago, IL</h3>
+    </header>
+    <section>
+      <h2>dedicated to the craft of Building websites</h2>
+      <p>
+        Every year the brightest web designers and front-end developers descend
+        on Chicago to discuss the latest technologies. Join us this August!
+      </p>
+      <h5></h5>
+      <h1>styles conference</h1>
+      <p>
+        Every year the brightest web designers and front-end developers descend
+        on Chicago to discuss the latest technologies. Join us this August!
+      </p>
+    </section>
+
+    <!-- Content -->
+    <section>
+      <section>
+        <h5>Speakers</h5>
+        <h3>world-clas Speakers</h3>
+        <p>
+          Joining us from all around the world are over twenty fantastic
+          speakers, here to share their stories.
+        </p>
+      </section>
+    </section>
+
+    <!-- footer -->
+    <footer>
+      <small>&copy; Styles Conference</small>
+    </footer>
   </body>
 </html>
