--- a/index.html
+++ b/index.html
@@ -4,41 +4,76 @@
     <title>styles conference</title>
     <link rel="stylesheet" href="main.css" />
   </head>
-
   <body>
+    <!-- bagian atas -->
     <header>
-      <h1>styles conference</h1>
+      <h1>
+        <a href="index.html"> conference</a>
+      </h1>
       <h3>August 24&ndash;26th &mdash; Chicago, IL</h3>
+      <!-- navigasi -->
+      <nav>
+        <a href="index.html"><Home</a>
+        <a href="speakers.html"><Speakers</a>
+        <a href="schedule.html"><Schedule</a>
+        <a href="vanue.html"><Vanue></a>
+        <a href="register.html"><Register></a>
+      </nav>
     </header>
+    <!-- intro -->
     <section>
       <h2>dedicated to the craft of Building websites</h2>
       <p>
         Every year the brightest web designers and front-end developers descend
         on Chicago to discuss the latest technologies. Join us this August!
       </p>
-      <h5></h5>
-      <h1>styles conference</h1>
-      <p>
-        Every year the brightest web designers and front-end developers descend
-        on Chicago to discuss the latest technologies. Join us this August!
-      </p>
+     <a href="register.html">Register Now</a>
     </section>
 
     <!-- Content -->
     <section>
       <section>
+        <a href="speakers">
         <h5>Speakers</h5>
         <h3>world-clas Speakers</h3>
+      </a>
         <p>
           Joining us from all around the world are over twenty fantastic
           speakers, here to share their stories.
         </p>
       </section>
     </section>
+    <section>
+      <a href="schedule.html">
+      <h5>schedule</h5>
+      <h3>world-clas Speakers</h3>
+    </a>
+      <p>
+        Enjoy three inspiring and action-packed days of talks, gatherings, and all-around good times.
+
+      </p>
+    </section>
+    <section>
+      <a href="vanue.html">
+      <h5>vanue</h5>
+      <h3>world-clas Speakers</h3>
+    </a>
+      <p>
+        Within the heart of downtown Chicago, The Chicago Theatre will provide a beautiful conference venue.
+      </p>
+    </section>
 
     <!-- footer -->
     <footer>
       <small>&copy; Styles Conference</small>
+      <!-- navigasi -->
+      <nav>
+        <a href="index.html"><Home</a>
+        <a href="speakers.html"><Speakers</a>
+        <a href="schedule.html"><Schedule</a>
+        <a href="vanue.html"><Vanue></a>
+        <a href="register.html"><Register></a>
+      </nav>
     </footer>
   </body>
 </html>
