tambah halaman halaman baru

--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
     <!-- bagian atas -->
     <header>
       <h1>
-        <a href="index.html"> conference</a>
+        <a href="index.html">Style conference</a>
       </h1>
       <h3>August 24&ndash;26th &mdash; Chicago, IL</h3>
       <!-- navigasi -->
       <nav>
-        <a href="index.html"><Home</a>
-        <a href="speakers.html"><Speakers</a>
-        <a href="schedule.html"><Schedule</a>
-        <a href="vanue.html"><Vanue></a>
-        <a href="register.html"><Register></a>
+        <a href="index.html">Home</a>
+        <a href="speakers.html">Speakers</a>
+        <a href="schedule.html">Schedule</a>
+        <a href="vanue.html">Vanue</a>
+        <a href="register.html">Register</a>
       </nav>
     </header>
     <!-- intro -->
@@ -27,16 +27,16 @@
         Every year the brightest web designers and front-end developers descend
         on Chicago to discuss the latest technologies. Join us this August!
       </p>
-     <a href="register.html">Register Now</a>
+      <a href="register.html">Register Now</a>
     </section>
 
     <!-- Content -->
     <section>
       <section>
         <a href="speakers">
-        <h5>Speakers</h5>
-        <h3>world-clas Speakers</h3>
-      </a>
+          <h5>Speakers</h5>
+          <h3>world-clas Speakers</h3>
+        </a>
         <p>
           Joining us from all around the world are over twenty fantastic
           speakers, here to share their stories.
@@ -45,21 +45,22 @@
     </section>
     <section>
       <a href="schedule.html">
-      <h5>schedule</h5>
-      <h3>world-clas Speakers</h3>
-    </a>
+        <h5>schedule</h5>
+        <h3>world-clas Speakers</h3>
+      </a>
       <p>
-        Enjoy three inspiring and action-packed days of talks, gatherings, and all-around good times.
-
+        Enjoy three inspiring and action-packed days of talks, gatherings, and
+        all-around good times.
       </p>
     </section>
     <section>
       <a href="vanue.html">
-      <h5>vanue</h5>
-      <h3>world-clas Speakers</h3>
-    </a>
+        <h5>vanue</h5>
+        <h3>world-clas Speakers</h3>
+      </a>
       <p>
-        Within the heart of downtown Chicago, The Chicago Theatre will provide a beautiful conference venue.
+        Within the heart of downtown Chicago, The Chicago Theatre will provide a
+        beautiful conference venue.
       </p>
     </section>
 
@@ -68,11 +69,11 @@
       <small>&copy; Styles Conference</small>
       <!-- navigasi -->
       <nav>
-        <a href="index.html"><Home</a>
-        <a href="speakers.html"><Speakers</a>
-        <a href="schedule.html"><Schedule</a>
-        <a href="vanue.html"><Vanue></a>
-        <a href="register.html"><Register></a>
+        <a href="index.html">Home</a>
+        <a href="speakers.html">Speakers</a>
+        <a href="schedule.html">Schedule</a>
+        <a href="vanue.html">Vanue</a>
+        <a href="register.html">Register</a>
       </nav>
     </footer>
   </body>
