--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>styles conference</title>
+    <title>Styles Conference - Home</title>
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
     <!-- bagian atas -->
     <header>
       <h1>
-        <a href="index.html">Style conference</a>
+        <a href="index.html">Style Conference</a>
       </h1>
       <h3>August 24&ndash;26th &mdash; Chicago, IL</h3>
       <!-- navigasi -->
@@ -33,10 +33,11 @@
     <!-- Content -->
     <section>
       <section>
-        <a href="speakers">
+        <a href="speakers.html">
           <h5>Speakers</h5>
-          <h3>world-clas Speakers</h3>
         </a>
+        <h3>World-Clas Speakers</h3>
+
         <p>
           Joining us from all around the world are over twenty fantastic
           speakers, here to share their stories.
@@ -46,8 +47,8 @@
     <section>
       <a href="schedule.html">
         <h5>schedule</h5>
-        <h3>world-clas Speakers</h3>
       </a>
+      <h3>World-Clas Schedule</h3>
       <p>
         Enjoy three inspiring and action-packed days of talks, gatherings, and
         all-around good times.
@@ -56,8 +57,8 @@
     <section>
       <a href="vanue.html">
         <h5>vanue</h5>
-        <h3>world-clas Speakers</h3>
       </a>
+      <h3>World-Clas Vanue</h3>
       <p>
         Within the heart of downtown Chicago, The Chicago Theatre will provide a
         beautiful conference venue.
