--- a/register.html
+++ b/register.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>styles conference - register</title>
+    <title>Styles Conference - Register</title>
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
     <!-- bagian atas -->
     <header>
       <h1>
-        <a href="index.html"> conference</a>
+        <a href="index.html"> Style Conference</a>
       </h1>
       <h3>August 24&ndash;26th &mdash; Chicago, IL</h3>
       <!-- navigasi -->
