--- a/speakers.html
+++ b/speakers.html
@@ -1,36 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>styles conference - speakers</title>
+    <title>Styles Conference - Speakers</title>
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
     <!-- bagian atas -->
     <header>
       <h1>
-        <a href="index.html"> conference</a>
+        <a href="index.html">Style Conference</a>
       </h1>
       <h3>August 24&ndash;26th &mdash; Chicago, IL</h3>
       <!-- navigasi -->
       <nav>
-        <a href="index.html"><Home</a>
-        <a href="speakers.html"><Speakers</a>
-        <a href="schedule.html"><Schedule</a>
-        <a href="vanue.html"><Vanue></a>
-        <a href="register.html"><Register></a>
+        <a href="index.html">Home</a>
+        <a href="speakers.html">Speakers</a>
+        <a href="schedule.html">Schedule</a>
+        <a href="vanue.html">Vanue</a>
+        <a href="register.html">Register</a>
       </nav>
     </header>
- 
+
     <!-- footer -->
     <footer>
       <small>&copy; Styles Conference</small>
       <!-- navigasi -->
       <nav>
-        <a href="index.html"><Home</a>
-        <a href="speakers.html"><Speakers</a>
-        <a href="schedule.html"><Schedule</a>
-        <a href="vanue.html"><Vanue></a>
-        <a href="register.html"><Register></a>
+        <a href="index.html">Home</a>
+        <a href="speakers.html">Speakers</a>
+        <a href="schedule.html">Schedule</a>
+        <a href="vanue.html">Vanue</a>
+        <a href="register.html">Register</a>
       </nav>
     </footer>
   </body>
