--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <!-- bagian atas -->
-    <header>
+    <header class="container">
       <h1>
         <a href="index.html">Style Conference</a>
       </h1>
@@ -66,7 +66,7 @@
     </section>
 
     <!-- footer -->
-    <footer>
+    <footer class="container">
       <small>&copy; Styles Conference</small>
       <!-- navigasi -->
       <nav>
