pakai kelas countainer

--- a/schedule.html
+++ b/schedule.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <!-- bagian atas -->
-    <header>
+    <header class="container">
       <h1>
         <a href="index.html"> Style Conference </a>
       </h1>
@@ -21,7 +21,7 @@
       </nav>
     </header>
     <!-- footer -->
-    <footer>
+    <footer class="container">
       <small>&copy; Styles Conference</small>
       <!-- navigasi -->
       <nav>
