--- a/vanue.html
+++ b/vanue.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <!-- bagian atas -->
-    <header>
+    <headerclass="container">
       <h1>
         <a href="index.html"> Style Conference</a>
       </h1>
@@ -22,7 +22,7 @@
     </header>
 
     <!-- footer -->
-    <footer>
+    <footer class="container">
       <small>&copy; Styles Conference</small>
       <!-- navigasi -->
       <nav>
