tambahkan section di index

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </nav>
     </header>
     <!-- intro -->
-    <section>
+    <section class="container">
       <h2>dedicated to the craft of Building websites</h2>
       <p>
         Every year the brightest web designers and front-end developers descend
@@ -31,7 +31,7 @@
     </section>
 
     <!-- Content -->
-    <section>
+    <section class="container">
       <section>
         <a href="speakers.html">
           <h5>Speakers</h5>
