--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         Every year the brightest web designers and front-end developers descend
         on Chicago to discuss the latest technologies. Join us this August!
       </p>
-      <a href="register.html">Register Now</a>
+      <a href="register.html" class="btn btn-alt">Register Now</a>
     </section>
 
     <!-- Content -->
@@ -43,26 +43,26 @@
           speakers, here to share their stories.
         </p>
       </section>
-    </section>
-    <section>
-      <a href="schedule.html">
-        <h5>schedule</h5>
-      </a>
-      <h3>World-Clas Schedule</h3>
-      <p>
-        Enjoy three inspiring and action-packed days of talks, gatherings, and
-        all-around good times.
-      </p>
-    </section>
-    <section>
-      <a href="vanue.html">
-        <h5>vanue</h5>
-      </a>
-      <h3>World-Clas Vanue</h3>
-      <p>
-        Within the heart of downtown Chicago, The Chicago Theatre will provide a
-        beautiful conference venue.
-      </p>
+      <section>
+        <a href="schedule.html">
+          <h5>schedule</h5>
+        </a>
+        <h3>World-Clas Schedule</h3>
+        <p>
+          Enjoy three inspiring and action-packed days of talks, gatherings, and
+          all-around good times.
+        </p>
+      </section>
+      <section>
+        <a href="vanue.html">
+          <h5>vanue</h5>
+        </a>
+        <h3>World-Clas Vanue</h3>
+        <p>
+          Within the heart of downtown Chicago, The Chicago Theatre will provide
+          a beautiful conference venue.
+        </p>
+      </section>
     </section>
 
     <!-- footer -->
