tambahkan sistem grid dan columns

--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
   </head>
   <body>
     <!-- bagian atas -->
-    <header class="container">
-      <h1>
-        <a href="index.html">Style Conference</a>
+    <header class="container group">
+      <h1 class="logo">
+        <a href="index.html"
+          >Style <br />
+          Conference
+        </a>
       </h1>
       <h3>August 24&ndash;26th &mdash; Chicago, IL</h3>
       <!-- navigasi -->
@@ -21,7 +24,7 @@
       </nav>
     </header>
     <!-- intro -->
-    <section class="container">
+    <section class="hero container">
       <h2>dedicated to the craft of Building websites</h2>
       <p>
         Every year the brightest web designers and front-end developers descend
@@ -31,8 +34,8 @@
     </section>
 
     <!-- Content -->
-    <section class="container">
-      <section>
+    <section class="grid">
+      <section class="col-1-3">
         <a href="speakers.html">
           <h5>Speakers</h5>
         </a>
@@ -43,7 +46,7 @@
           speakers, here to share their stories.
         </p>
       </section>
-      <section>
+      <section class="col-1-3">
         <a href="schedule.html">
           <h5>schedule</h5>
         </a>
@@ -53,7 +56,7 @@
           all-around good times.
         </p>
       </section>
-      <section>
+      <section class="col-1-3">
         <a href="vanue.html">
           <h5>vanue</h5>
         </a>
@@ -66,7 +69,7 @@
     </section>
 
     <!-- footer -->
-    <footer class="container">
+    <footer class="container primary-footer group">
       <small>&copy; Styles Conference</small>
       <!-- navigasi -->
       <nav>
